# SheetMusicViewer

./: .gitmodules  CMakeLists.txt  README.md  SheetMusicViewer.pro  SheetMusicViewer.qrc  SheetMusicViewer.service  controlwidget.h  controlwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mupdf.diff  mupdfdocument.cpp  mupdfdocument.h  pdfdocument.cpp  pdfdocument.h  settingswidget.cpp  settingswidget.h  settingswidget.ui  sheetselectwidget.cpp  sheetselectwidget.h  sheetswidget.cpp  sheetswidget.h
android/: AndroidManifest.xml
